--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
             <h2>Lista de tarefas <img src="\images\icon.png" alt=""></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Adicione suas tarefas">
-                <button>Adicionar</button>
+                <button onclick="AddTask()">Adicionar</button>
             </div>
             <ul id="list-container">
                <!-- <li class="checked">Tarefa 1</li>
@@ -21,5 +21,6 @@
             </ul>
         </div>
     </div>
+    <script src="/html/js/script.js"></script>
 </body>
 </html>
