--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List App</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>Lista de tarefas <img src="\images\icon.png" alt=""></h2>
+            <h2>Lista de tarefas <img src="/images/icon.png" alt=""></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Adicione suas tarefas">
                 <button onclick="AddTask()">Adicionar</button>
@@ -21,6 +21,6 @@
             </ul>
         </div>
     </div>
-    <script src="/html/js/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
